--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="user_name">Senouci Nour El Imane</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="proj">En cours de projection dans </string>
+    <string name="title_activity_salle_map">Map</string>
 
 </resources>
